--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 :root {
 	/* COLORS */
-	--color-primary: #0EAD69;
+	--color-primary: #097B4A;
 	--color-primary-dark: #13975e;
-	--color-secondary-1: #F72C25;
+	--color-secondary-1: #E51010;
 	--color-secondary-1-dark: #d12d27;
 	--color-secondary-2: #F7B32B;
 	--color-secondary-2-dark: #e69d3f;
-	--color-secondary-3: #628395;
-	--color-secondary-3-dark: #467188;
+	--color-secondary-3: #556A82;
+	--color-secondary-3-dark: #4882a1;
 	--color-secondary-4: #65743A;
 	--color-secondary-4-dark: #718637;
 
